2007-08-17 jerome
* Add support for cases where matrixbox or listbox is a proxyfield

2007-08-13 jerome
* Add a global print action

2006-05-12 jerome
* remove debug info in generated XML by listbox macro

2006-03-08 jerome
* Display the listfields value from items

2006-02-24 Seb
* Created this business template in order to split erp5_core